<resources>
    <string name="app_name">dnd</string>

    <!-- strings for char sheet skills and stats page-->
    <string name="level_class_alignment">Level %1$d %2$s %3$s</string>

    <string name="strength">Strength\n%1$d\n(%2$d)</string>
    <string name="dexterity">Dexterity\n%1$d\n(%2$d)</string>
    <string name="constitution">Constitution\n%1$d\n(%2$d)</string>
    <string name="intelligence">Intelligence\n%1$d\n(%2$d)</string>
    <string name="wisdom">Wisdom\n%1$d\n(%2$d)</string>
    <string name="charisma">Charisma\n%1$d\n(%2$d)</string>

    <string name="acrobatics">Acrobatics</string>
    <string name="animal_handling">Animal Handling</string>
    <string name="arcana">Arcana</string>
    <string name="athletics">Athletics</string>
    <string name="deception">Deception</string>
    <string name="history">History</string>
    <string name="insight">Insight</string>
    <string name="intimidation">Intimidation</string>
    <string name="investigation">Investigation</string>
    <string name="medicine">Medicine</string>
    <string name="nature">Nature</string>
    <string name="perception">Perception</string>
    <string name="persuasion"> Persuasion</string>
    <string name="religion">Religion</string>
    <string name="sleight_of_hand">Sleight of Hand</string>
    <string name="stealth">Stealth</string>
    <string name="survival">Survival</string>

    <string name="player_name">%1$s</string>
    <string name="roll_result">You rolled %1$s</string>

    <string name="snackbar_more_info">Details</string>

    <!-- strings for char sheet combat page-->
    <string name="armor_class">Armor Class\n%1$d</string>
    <string name="initiative">Initiative\n%1$d</string>
    <string name="speed">Speed\n%1$d</string>
    <string name="hp_max_current">HP: %1$d\n (%2$d max)</string>
    <string name="hp_temp">Temporary HP\n%1$d</string>
    <!-- hit dice in the form 1d6-->
    <string name="hit_dice">Hit Dice\n%1$d d %2$d</string>
    <string name="death_success">Death Save Success</string>
    <string name="death_failure">Death Save Failure</string>

    <!-- buttons for player sheet  -->
    <string name="skills_abilities">Skills\nand\nAbilities</string>
    <string name="attacks_combat_hp">Combat\nand\nHP</string>
    <string name="spellcasting">Spells\nand\nCasting</string>
</resources>
