<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/charactersheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playersheet.PlayerSheetFragment">


    <TextView
        android:id="@+id/mainCharName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="char sheet"
        app:layout_constraintBottom_toTopOf="@+id/horiz_guidline_header"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert_guideline_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verty_guideline_67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horiz_guidline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horiz_guideline_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/str_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/strength"
        app:layout_constraintBottom_toTopOf="@+id/dex_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horiz_guidline_header" />

    <TextView
        android:id="@+id/dex_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/dexterity"
        app:layout_constraintBottom_toTopOf="@+id/con_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/str_tv" />

    <TextView
        android:id="@+id/con_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/constitution"
        app:layout_constraintBottom_toTopOf="@+id/int_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dex_tv" />

    <TextView
        android:id="@+id/int_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/intelligence"
        app:layout_constraintBottom_toTopOf="@id/wis_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_tv" />

    <TextView
        android:id="@+id/wis_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/wisdom"
        app:layout_constraintBottom_toTopOf="@+id/cha_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/int_tv" />

    <TextView
        android:id="@+id/cha_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/charisma"
        app:layout_constraintBottom_toTopOf="@+id/horiz_guideline_footer"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wis_tv" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/charsheet_tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills_abilities" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attacks_combat_hp" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spellcasting" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
