<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/spellcastingButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".PlayerSheetActivity" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/spellcastingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spellcasting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/combatButton"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/combatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attacks_combat_hp"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintStart_toEndOf="@+id/spellcastingButton"
        app:layout_constraintEnd_toStartOf="@id/skillsAbilitiesButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skillsAbilitiesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills_abilities"
        app:layout_constraintStart_toEndOf="@id/combatButton"
        app:layout_constraintTop_toBottomOf="@id/container"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
