<?xml version="1.0" encoding="utf-8"?>
<!-- TODO refactor/rename this.
    the original intent was to display all relevant information on one page, but that quickly
    became impractical. as a result, this fragment will only display stats and abilities-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/charactersheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.playersheet.PlayerSheetStatsFragment">

    <TextView
        android:id="@+id/mainCharName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="char sheet"
        app:layout_constraintBottom_toTopOf="@+id/horiz_guidline_header"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vert_guideline_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horiz_guidline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horiz_guideline_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/str_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/strength"
        app:layout_constraintBottom_toTopOf="@+id/dex_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horiz_guidline_header" />

    <TextView
        android:id="@+id/dex_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/dexterity"
        app:layout_constraintBottom_toTopOf="@+id/con_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/str_tv" />

    <TextView
        android:id="@+id/con_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/constitution"
        app:layout_constraintBottom_toTopOf="@+id/int_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dex_tv" />

    <TextView
        android:id="@+id/int_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/intelligence"
        app:layout_constraintBottom_toTopOf="@id/wis_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_tv" />

    <TextView
        android:id="@+id/wis_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/wisdom"
        app:layout_constraintBottom_toTopOf="@+id/cha_tv"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/int_tv" />

    <TextView
        android:id="@+id/cha_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/charisma"
        app:layout_constraintBottom_toTopOf="@+id/horiz_guideline_footer"
        app:layout_constraintEnd_toStartOf="@+id/vert_guideline_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wis_tv" />

        <ListView
            android:id="@+id/skill_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/horiz_guideline_footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vert_guideline_13"
            app:layout_constraintTop_toTopOf="@+id/horiz_guidline_header" />

</androidx.constraintlayout.widget.ConstraintLayout>

